index/style.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
}

header {
    background-color: #333;
    color: #fff;
    padding: 10px 20px;
    text-align: center;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 1.0); /* Adding shadow effect */
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

nav ul li {
    display: inline;
    margin-right: 20px;
}

nav ul li a {
    color: #fff;
    text-decoration: none;
    transition: color 0.3s ease; /* Smooth transition effect */
}

nav ul li a:hover {
    color: #ffd700; /* Change color on hover */
}

.container {
    max-width: 960px;
    margin: 20px auto;
    padding: 0 20px;
}

section {
    margin-bottom: 40px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.15); /* Adding shadow effect */
    padding: 20px;
}

h1, h2, h3 {
    color: #333;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1); /* Adding text shadow effect */
}

footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 10px 0;
    position: fixed;
    bottom: 0;
    width: 100%;
    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.8); /* Adding shadow effect */
}

.swiper-container {
    /* Remove fixed height */
    height: auto;
}

.article-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
}

.article {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.article img {
    width: 100%;
    height: auto;
}

.article h3 {
    margin: 10px 0;
}

.article a {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 10px;
    text-decoration: none;
    border-radius: 5px;
}

